Part with Stats Boxes added - mobile

--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
     </div>
     <!-- <img src="img/Background.png" alt="Computer"> -->
   </section>
+  <section class="container stats">
+    <h2>The most popular sales platform in country</h2>
+    <div class="boxes">
+      <div class="box"><i></i>
+        <h3>100000+</h3>
+        <p>daily entries</p>
+      </div>
+      <div class="box"><i></i>
+        <h3>2000000+</h3>
+        <p>seen products every day</p>
+      </div>
+      <div class="box"><i></i>
+        <h3>10000+</h3>
+        <p>added posts daily</p>
+      </div>
+    </div>
+  </section>
   <script src="js/app.js"></script>
 </body>
 
