Section 'About' boxes made - mobile

--- a/index.html
+++ b/index.html
@@ -50,6 +50,32 @@
       </div>
     </div>
   </section>
+  <section class="container about">
+    <div class="about--box">
+      <div class="about--image"><img src="img/Macbook.png" alt="Macbook image"></div>
+      <div class="about--description">
+        <h2>Be always first</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a nam reprehenderit voluptatum provident
+          corporis expedita sequi, voluptatibus nulla? Sequi?</p>
+      </div>
+    </div>
+    <div class="about--box">
+      <div class="about--image"><img src="img/iPhone.png" alt="Mobile phone image"></div>
+      <div class="about--description">
+        <h2>Your shop is where you are!</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a nam reprehenderit voluptatum provident
+          corporis expedita sequi, voluptatibus nulla? Sequi?</p>
+      </div>
+    </div>
+    <div class="about--box">
+      <div class="about--description">
+        <h2>Increase recognition your brand!</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a nam reprehenderit voluptatum provident
+          corporis expedita sequi, voluptatibus nulla? Sequi?</p>
+      </div>
+      <div class="about--image"><img src="img/Trumpet.png" alt="Trumpet image"></div>
+    </div>
+  </section>
   <script src="js/app.js"></script>
 </body>
 
