Added animated hamburger and sliding menu

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
 <body>
   <header>
     <div class="top">
-      <a href="#" class="logo">BestShop</a>
-      <a href="#" class="hamburger"><i class="fas fa-bars"></i></a>
+      <a href="javascript:void(0)" class="logo">BestShop</a>
+      <!-- javascript:void(0) nie przeładuje strony po naciśnięciu  -->
+      <a href="javascript:void(0)" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </div>
     <nav class="menu">
       <ul>
