Pricing section + cosmetic changes in header - mobile

--- a/index.html
+++ b/index.html
@@ -1,87 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>BestShop</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css" />
-  <title>BestShop</title>
-</head>
-
-<body>
-  <header>
-    <div class="top">
-      <a href="javascript:void(0)" class="logo">BestShop</a>
-      <!-- javascript:void(0) nie przeładuje strony po naciśnięciu  -->
-      <a href="javascript:void(0)" class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </a>
-    </div>
-    <nav class="menu">
-      <ul>
-        <li><a href="#">why us</a></li>
-        <li><a href="#">benefits</a></li>
-        <li><a href="#">prices</a></li>
-        <li><a href="#">contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="sell">
-    <div class="sell-content">
-      <h1>Sell More!</h1>
-      <p>Open shop on our platform and increase your sales</p><a href="#">Open your shop</a>
-    </div>
-    <!-- <img src="img/Background.png" alt="Computer"> -->
-  </section>
-  <section class="container stats">
-    <h2>The most popular sales platform in country</h2>
-    <div class="boxes">
-      <div class="box"><i></i>
-        <h3>100000+</h3>
-        <p>daily entries</p>
+  <body>
+    <header>
+      <div class="top">
+        <a href="javascript:void(0)" class="logo">BestShop</a>
+        <!-- javascript:void(0) nie przeładuje strony po naciśnięciu  -->
+        <a href="javascript:void(0)" class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
       </div>
-      <div class="box"><i></i>
-        <h3>2000000+</h3>
-        <p>seen products every day</p>
+      <nav class="menu">
+        <ul>
+          <li><a href="#">why us</a></li>
+          <li><a href="#">benefits</a></li>
+          <li><a href="#">prices</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="sell">
+      <div class="sell-content">
+        <h1>Sell More!</h1>
+        <p>Open shop on our platform and increase your sales</p>
+        <a href="#">Open your shop</a>
       </div>
-      <div class="box"><i></i>
-        <h3>10000+</h3>
-        <p>added posts daily</p>
+      <!-- <img src="img/Background.png" alt="Computer"> -->
+    </section>
+    <section class="container stats">
+      <h2>The most popular sales platform in country</h2>
+      <div class="boxes">
+        <div class="box">
+          <i></i>
+          <h3>100000+</h3>
+          <p>daily entries</p>
+        </div>
+        <div class="box">
+          <i></i>
+          <h3>2000000+</h3>
+          <p>seen products every day</p>
+        </div>
+        <div class="box">
+          <i></i>
+          <h3>10000+</h3>
+          <p>added posts daily</p>
+        </div>
       </div>
-    </div>
-  </section>
-  <section class="container about">
-    <div class="about--box">
-      <div class="about--image"><img src="img/Macbook.png" alt="Macbook image"></div>
-      <div class="about--description">
-        <h2>Be always first</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a nam reprehenderit voluptatum provident
-          corporis expedita sequi, voluptatibus nulla? Sequi?</p>
+    </section>
+    <section class="container about">
+      <div class="about--box">
+        <div class="about--image">
+          <img src="img/Macbook.png" alt="Macbook image" />
+        </div>
+        <div class="about--description">
+          <h2>Be always first</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a
+            nam reprehenderit voluptatum provident corporis expedita sequi,
+            voluptatibus nulla? Sequi?
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="about--box">
-      <div class="about--image"><img src="img/iPhone.png" alt="Mobile phone image"></div>
-      <div class="about--description">
-        <h2>Your shop is where you are!</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a nam reprehenderit voluptatum provident
-          corporis expedita sequi, voluptatibus nulla? Sequi?</p>
+      <div class="about--box">
+        <div class="about--image">
+          <img src="img/iPhone.png" alt="Mobile phone image" />
+        </div>
+        <div class="about--description">
+          <h2>Your shop is where you are!</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a
+            nam reprehenderit voluptatum provident corporis expedita sequi,
+            voluptatibus nulla? Sequi?
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="about--box">
-      <div class="about--description">
-        <h2>Increase recognition your brand!</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a nam reprehenderit voluptatum provident
-          corporis expedita sequi, voluptatibus nulla? Sequi?</p>
+      <div class="about--box">
+        <div class="about--description">
+          <h2>Increase recognition your brand!</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum a
+            nam reprehenderit voluptatum provident corporis expedita sequi,
+            voluptatibus nulla? Sequi?
+          </p>
+        </div>
+        <div class="about--image">
+          <img src="img/Trumpet.png" alt="Trumpet image" />
+        </div>
       </div>
-      <div class="about--image"><img src="img/Trumpet.png" alt="Trumpet image"></div>
-    </div>
-  </section>
-  <script src="js/app.js"></script>
-</body>
-
+    </section>
+    <section class="container pricing">
+      <h2>Pricing</h2>
+      <div class="pricing--offers">
+        <div class="box--offer">
+          <div class="offerName">
+            <h3>Basic</h3>
+            <span class="price">$0</span>
+          </div>
+          <ul>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />100 MB HDD</li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />1 Subdomain</li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />2 E-mails</li>
+            <li><i>x</i>Two years license</li>
+            <li><i>x</i>Full support</li>
+          </ul>
+          <button>Begin</button>
+        </div>
+        <div class="box--offer">
+          <div class="offerName">
+            <h3>Professional</h3>
+            <span class="price">$25</span
+            ><span class="limited">Limited offer</span>
+          </div>
+          <ul>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" /> 500 MB HDD</li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />2 Subdomain</li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />5 E-mails</li>
+            <li>
+              <img src="img/Checkmark.svg" alt="Checkmark" />One years license
+            </li>
+            <li><i>x</i>Full support</li>
+          </ul>
+          <button>Begin</button>
+        </div>
+        <div class="box--offer">
+          <div class="offerName">
+            <h3>Premium</h3>
+            <span class="price">$60</span
+            ><span class="limited">Limited offer</span>
+          </div>
+          <ul>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />2 GB HDD</li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />5 Subdomain</li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />20 E-mails</li>
+            <li>
+              <img src="img/Checkmark.svg" alt="Checkmark" />Two years license
+            </li>
+            <li><img src="img/Checkmark.svg" alt="Checkmark" />Full support</li>
+          </ul>
+          <button>Begin</button>
+        </div>
+      </div>
+    </section>
+    <script src="js/app.js"></script>
+  </body>
 </html>
